--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>PanelAdmin</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+  <meta name="google-signin-client_id" content="917631620470-dnavatbficjgobb12cl0kioh2tbssbl6.apps.googleusercontent.com">  
+  <script src="https://apis.google.com/js/platform.js?"></script>
   <!-- Favicon icon -->
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon.png">
 
